Minor bug fix: resizing site name's font on small screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ header {
     .carousel {
         height:170px;
     }
-    .brand {
+    .brand a {
         font-size: 1.8em;
     }
 }
@@ -105,7 +105,7 @@ header {
     .carousel {
         height: 230px;
     }
-    .brand {
+    .brand a {
         font-size: 2.3em;
     }
 }
